fix: issue with divider not visible in flex layout (#3032)

--- a/packages/components/src/components/divider/divider.scss
+++ b/packages/components/src/components/divider/divider.scss
@@ -10,17 +10,23 @@
 		@include helpers.divider();
 
 		block-size: variables.$db-border-height-3xs;
-		inline-size: 100%;
+
+		&[data-width="full"] {
+			inline-size: 100%;
+		}
 	}
 
 	&[data-variant="vertical"] {
 		@include helpers.divider("left");
 
-		block-size: 100%;
 		inline-size: variables.$db-border-height-3xs;
 
 		&:not([data-margin="none"]) {
 			margin: 0 variables.$db-spacing-fixed-sm;
+		}
+
+		&[data-width="full"] {
+			block-size: 100%;
 		}
 	}
 }
